# hdr-sundial

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs
.github/workflows/: deploy-pages.yml  release.yml
src/: default_config.toml  display.rs  gui.rs  location.rs  main.rs  solar.rs  startup.rs  sundial_math.rs  world_map.rs
ui/: about_dialog.slint  app.slint  backend.slint  brightness_curve.slint  compass.slint  elevation_arc.slint  globe.slint  season_slider.slint  settings.slint  sun_dial.slint  theme.slint  title_bar.slint  widgets.slint
website/: .gitignore  README.md  index.html  package-lock.json  package.json  prerender.js
website/public/: CNAME  robots.txt  sitemap.xml
website/src/: App.jsx  entry-server.jsx  main.jsx  styles.css
