[package]
name = "hdr-sundial"
version = "0.1.0"
edition = "2021"
description = "HDR Sundial — set Windows SDR content brightness from the sun's position"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sundial"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
winreg = "0.52"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
