[package]
name = "hdr-sundial"
version = "0.1.0"
edition = "2021"
description = "HDR Sundial — set Windows SDR content brightness from the sun's position"
license = "MIT OR Apache-2.0"
repository = "https://github.com/evaera/hdr-sundial"
readme = "README.md"
keywords = ["hdr", "brightness", "sdr", "windows", "display"]
categories = ["command-line-utilities", "os::windows-apis"]

[[bin]]
name = "sundial"
path = "src/main.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
winreg = "0.52"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
]

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
