[package]
name = "hdr-sundial"
version = "0.2.0"
edition = "2021"
description = "HDR Sundial — set Windows SDR content brightness from the sun's position"
license = "MIT OR Apache-2.0"
repository = "https://github.com/evaera/hdr-sundial"
readme = "README.md"
keywords = ["hdr", "brightness", "sdr", "windows", "display"]
categories = ["command-line-utilities", "os::windows-apis"]

[[bin]]
name = "sundial"
path = "src/main.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
winreg = "0.52"
slint = { version = "1", features = ["raw-window-handle-06"] }
raw-window-handle = "0.6"
tray-icon = "0.19"
ico = "0.3"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Foundation",
    "Devices_Geolocation",
]

[build-dependencies]
winresource = "0.1"
slint-build = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
